Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19894

QAuthenticator::setUser(...) incorrectly parses user name in form user@domain (NTLM Authentication)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.7.3
    • None
    • a59dab3c6785b7db38f2f43a2fcd8e29c96775af, 43d4faf686da7d553171d7c8894c2825b4572dd6(4.8), f74ff46c7a333d771b07d8ff38df10d9fd13bbcf(5.0)

      If the user name is given as 'domain\user', then it is parsed correctly.
      But when user name looks like 'user@domain', it is parsed wrong.

      This is fragment from file network\kernel\qauthenticator.cpp (with line numbers)

      223>        } else if((separatorPosn = user.indexOf(QLatin1String("@"))) != -1) {
      224>            //domain name is present
      225>            d->realm.clear();
      226>            d->userDomain = user.left(separatorPosn);
      227>            d->extractedUser = user.left(separatorPosn);
      228>            d->user = user;
      229>        }
      
      

      The problem is in line 226.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shkearns Shane Kearns
            oshic Oleg Shemkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes